src/parser.output
   0  $accept : %entry% $end

   1  program : CORDBCONN conn_block ENDDBCONN CORDB tables_list ENDDB fdef_list

   2  fdef_list :
   3            | fdef_list fdef

   4  fdef : dtype ID LPAREN formals_opt RPAREN LBRACKET var_decl_list stmt_list RBRACKET

   5  stmt_list :
   6            | stmt_list stmt

   7  stmt : expr SEMI
   8       | LBRACKET stmt_list RBRACKET
   9       | RETURN expr SEMI
  10       | IF LPAREN expr RPAREN stmt
  11       | IF LPAREN expr RPAREN stmt ELSE stmt
  12       | WHILE LPAREN expr RPAREN stmt
  13       | FOR LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt

  14  expr : INTLITERAL
  15       | STRINGLITERAL
  16       | ID ASSIGN expr
  17       | ID PLEQ expr
  18       | ID MIEQ expr
  19       | ID MUEQ expr
  20       | ID DVEQ expr
  21       | expr PLUS expr
  22       | expr MINUS expr
  23       | expr TIMES expr
  24       | expr DIVIDE expr
  25       | expr MOD expr
  26       | expr EXP expr
  27       | expr EQ expr
  28       | expr NEQ expr
  29       | expr LT expr
  30       | expr LEQ expr
  31       | expr GT expr
  32       | expr GEQ expr
  33       | expr OR expr
  34       | expr AND expr
  35       | ID
  36       | ID INCR
  37       | ID DECR
  38       | PRINT LPAREN actuals_opt RPAREN
  39       | ID LPAREN actuals_opt RPAREN

  40  expr_opt :
  41           | expr

  42  formals_opt :
  43              | formal_list

  44  formal_list : formal
  45              | formal_list COMMA formal

  46  formal : dtype ID

  47  actuals_opt :
  48              | actuals_list

  49  actuals_list : expr
  50               | actuals_list COMMA expr

  51  var_decl_list :
  52                | var_decl_list var_decl

  53  var_decl : dtype ID ASSIGN expr SEMI

  54  dtype : VOID
  55        | INT
  56        | STRING
  57        | TABLE

  58  conn_label : SERVER
  59             | PORT
  60             | USER
  61             | PASS
  62             | TYPE
  63             | DBNAME

  64  conn_attribute : conn_label ASSIGN STRINGLITERAL SEMI

  65  conn_block : conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute

  66  attribute_label : ID

  67  attribute : attribute_label COLON dtype SEMI

  68  attribute_group : attribute
  69                  | attribute_group attribute

  70  key_decls_list :
  71                 | key_decls_list key_decls

  72  key_decls : PRIMARYKEY LPAREN attribute_label RPAREN SEMI
  73            | FOREIGNKEY LPAREN attribute_label RPAREN SEMI

  74  table_label : ID
  75              | ID COLON ID

  76  table_body : attribute_group key_decls_list fdef_list

  77  table : TABLE table_label LBRACKET table_body RBRACKET SEMI

  78  tables_list :
  79              | tables_list table

  80  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (80)

	CORDBCONN  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : CORDBCONN . conn_block ENDDBCONN CORDB tables_list ENDDB fdef_list  (1)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_block  goto 11
	conn_label  goto 12
	conn_attribute  goto 13


state 4
	%entry% : '\001' program .  (80)

	.  reduce 80


state 5
	conn_label : SERVER .  (58)

	.  reduce 58


state 6
	conn_label : PORT .  (59)

	.  reduce 59


state 7
	conn_label : USER .  (60)

	.  reduce 60


state 8
	conn_label : PASS .  (61)

	.  reduce 61


state 9
	conn_label : TYPE .  (62)

	.  reduce 62


state 10
	conn_label : DBNAME .  (63)

	.  reduce 63


state 11
	program : CORDBCONN conn_block . ENDDBCONN CORDB tables_list ENDDB fdef_list  (1)

	ENDDBCONN  shift 14
	.  error


state 12
	conn_attribute : conn_label . ASSIGN STRINGLITERAL SEMI  (64)

	ASSIGN  shift 15
	.  error


state 13
	conn_block : conn_attribute . conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute  (65)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_label  goto 12
	conn_attribute  goto 16


state 14
	program : CORDBCONN conn_block ENDDBCONN . CORDB tables_list ENDDB fdef_list  (1)

	CORDB  shift 17
	.  error


state 15
	conn_attribute : conn_label ASSIGN . STRINGLITERAL SEMI  (64)

	STRINGLITERAL  shift 18
	.  error


state 16
	conn_block : conn_attribute conn_attribute . conn_attribute conn_attribute conn_attribute conn_attribute  (65)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_label  goto 12
	conn_attribute  goto 19


state 17
	program : CORDBCONN conn_block ENDDBCONN CORDB . tables_list ENDDB fdef_list  (1)
	tables_list : .  (78)

	.  reduce 78

	tables_list  goto 20


state 18
	conn_attribute : conn_label ASSIGN STRINGLITERAL . SEMI  (64)

	SEMI  shift 21
	.  error


state 19
	conn_block : conn_attribute conn_attribute conn_attribute . conn_attribute conn_attribute conn_attribute  (65)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_label  goto 12
	conn_attribute  goto 22


state 20
	program : CORDBCONN conn_block ENDDBCONN CORDB tables_list . ENDDB fdef_list  (1)
	tables_list : tables_list . table  (79)

	ENDDB  shift 23
	TABLE  shift 24
	.  error

	table  goto 25


state 21
	conn_attribute : conn_label ASSIGN STRINGLITERAL SEMI .  (64)

	.  reduce 64


state 22
	conn_block : conn_attribute conn_attribute conn_attribute conn_attribute . conn_attribute conn_attribute  (65)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_label  goto 12
	conn_attribute  goto 26


state 23
	program : CORDBCONN conn_block ENDDBCONN CORDB tables_list ENDDB . fdef_list  (1)
	fdef_list : .  (2)

	.  reduce 2

	fdef_list  goto 27


state 24
	table : TABLE . table_label LBRACKET table_body RBRACKET SEMI  (77)

	ID  shift 28
	.  error

	table_label  goto 29


state 25
	tables_list : tables_list table .  (79)

	.  reduce 79


state 26
	conn_block : conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute . conn_attribute  (65)

	SERVER  shift 5
	PORT  shift 6
	USER  shift 7
	PASS  shift 8
	TYPE  shift 9
	DBNAME  shift 10
	.  error

	conn_label  goto 12
	conn_attribute  goto 30


state 27
	program : CORDBCONN conn_block ENDDBCONN CORDB tables_list ENDDB fdef_list .  (1)
	fdef_list : fdef_list . fdef  (3)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	$end  reduce 1

	fdef  goto 35
	dtype  goto 36


state 28
	table_label : ID .  (74)
	table_label : ID . COLON ID  (75)

	COLON  shift 37
	LBRACKET  reduce 74


state 29
	table : TABLE table_label . LBRACKET table_body RBRACKET SEMI  (77)

	LBRACKET  shift 38
	.  error


state 30
	conn_block : conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute conn_attribute .  (65)

	.  reduce 65


state 31
	dtype : INT .  (55)

	.  reduce 55


state 32
	dtype : VOID .  (54)

	.  reduce 54


state 33
	dtype : STRING .  (56)

	.  reduce 56


state 34
	dtype : TABLE .  (57)

	.  reduce 57


state 35
	fdef_list : fdef_list fdef .  (3)

	.  reduce 3


state 36
	fdef : dtype . ID LPAREN formals_opt RPAREN LBRACKET var_decl_list stmt_list RBRACKET  (4)

	ID  shift 39
	.  error


state 37
	table_label : ID COLON . ID  (75)

	ID  shift 40
	.  error


state 38
	table : TABLE table_label LBRACKET . table_body RBRACKET SEMI  (77)

	ID  shift 41
	.  error

	attribute_label  goto 42
	attribute  goto 43
	attribute_group  goto 44
	table_body  goto 45


state 39
	fdef : dtype ID . LPAREN formals_opt RPAREN LBRACKET var_decl_list stmt_list RBRACKET  (4)

	LPAREN  shift 46
	.  error


state 40
	table_label : ID COLON ID .  (75)

	.  reduce 75


state 41
	attribute_label : ID .  (66)

	.  reduce 66


state 42
	attribute : attribute_label . COLON dtype SEMI  (67)

	COLON  shift 47
	.  error


state 43
	attribute_group : attribute .  (68)

	.  reduce 68


state 44
	attribute_group : attribute_group . attribute  (69)
	table_body : attribute_group . key_decls_list fdef_list  (76)
	key_decls_list : .  (70)

	ID  shift 41
	RBRACKET  reduce 70
	INT  reduce 70
	VOID  reduce 70
	STRING  reduce 70
	TABLE  reduce 70
	FOREIGNKEY  reduce 70
	PRIMARYKEY  reduce 70

	attribute_label  goto 42
	attribute  goto 48
	key_decls_list  goto 49


state 45
	table : TABLE table_label LBRACKET table_body . RBRACKET SEMI  (77)

	RBRACKET  shift 50
	.  error


state 46
	fdef : dtype ID LPAREN . formals_opt RPAREN LBRACKET var_decl_list stmt_list RBRACKET  (4)
	formals_opt : .  (42)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	RPAREN  reduce 42

	dtype  goto 51
	formals_opt  goto 52
	formal_list  goto 53
	formal  goto 54


state 47
	attribute : attribute_label COLON . dtype SEMI  (67)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	.  error

	dtype  goto 55


state 48
	attribute_group : attribute_group attribute .  (69)

	.  reduce 69


state 49
	key_decls_list : key_decls_list . key_decls  (71)
	table_body : attribute_group key_decls_list . fdef_list  (76)
	fdef_list : .  (2)

	FOREIGNKEY  shift 56
	PRIMARYKEY  shift 57
	RBRACKET  reduce 2
	INT  reduce 2
	VOID  reduce 2
	STRING  reduce 2
	TABLE  reduce 2

	fdef_list  goto 58
	key_decls  goto 59


state 50
	table : TABLE table_label LBRACKET table_body RBRACKET . SEMI  (77)

	SEMI  shift 60
	.  error


state 51
	formal : dtype . ID  (46)

	ID  shift 61
	.  error


state 52
	fdef : dtype ID LPAREN formals_opt . RPAREN LBRACKET var_decl_list stmt_list RBRACKET  (4)

	RPAREN  shift 62
	.  error


state 53
	formals_opt : formal_list .  (43)
	formal_list : formal_list . COMMA formal  (45)

	COMMA  shift 63
	RPAREN  reduce 43


state 54
	formal_list : formal .  (44)

	.  reduce 44


state 55
	attribute : attribute_label COLON dtype . SEMI  (67)

	SEMI  shift 64
	.  error


state 56
	key_decls : FOREIGNKEY . LPAREN attribute_label RPAREN SEMI  (73)

	LPAREN  shift 65
	.  error


state 57
	key_decls : PRIMARYKEY . LPAREN attribute_label RPAREN SEMI  (72)

	LPAREN  shift 66
	.  error


state 58
	fdef_list : fdef_list . fdef  (3)
	table_body : attribute_group key_decls_list fdef_list .  (76)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	RBRACKET  reduce 76

	fdef  goto 35
	dtype  goto 36


state 59
	key_decls_list : key_decls_list key_decls .  (71)

	.  reduce 71


state 60
	table : TABLE table_label LBRACKET table_body RBRACKET SEMI .  (77)

	.  reduce 77


state 61
	formal : dtype ID .  (46)

	.  reduce 46


state 62
	fdef : dtype ID LPAREN formals_opt RPAREN . LBRACKET var_decl_list stmt_list RBRACKET  (4)

	LBRACKET  shift 67
	.  error


state 63
	formal_list : formal_list COMMA . formal  (45)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	.  error

	dtype  goto 51
	formal  goto 68


state 64
	attribute : attribute_label COLON dtype SEMI .  (67)

	.  reduce 67


state 65
	key_decls : FOREIGNKEY LPAREN . attribute_label RPAREN SEMI  (73)

	ID  shift 41
	.  error

	attribute_label  goto 69


state 66
	key_decls : PRIMARYKEY LPAREN . attribute_label RPAREN SEMI  (72)

	ID  shift 41
	.  error

	attribute_label  goto 70


state 67
	fdef : dtype ID LPAREN formals_opt RPAREN LBRACKET . var_decl_list stmt_list RBRACKET  (4)
	var_decl_list : .  (51)

	.  reduce 51

	var_decl_list  goto 71


state 68
	formal_list : formal_list COMMA formal .  (45)

	.  reduce 45


state 69
	key_decls : FOREIGNKEY LPAREN attribute_label . RPAREN SEMI  (73)

	RPAREN  shift 72
	.  error


state 70
	key_decls : PRIMARYKEY LPAREN attribute_label . RPAREN SEMI  (72)

	RPAREN  shift 73
	.  error


state 71
	fdef : dtype ID LPAREN formals_opt RPAREN LBRACKET var_decl_list . stmt_list RBRACKET  (4)
	var_decl_list : var_decl_list . var_decl  (52)
	stmt_list : .  (5)

	INT  shift 31
	VOID  shift 32
	STRING  shift 33
	TABLE  shift 34
	LBRACKET  reduce 5
	RBRACKET  reduce 5
	WHILE  reduce 5
	IF  reduce 5
	FOR  reduce 5
	RETURN  reduce 5
	PRINT  reduce 5
	INTLITERAL  reduce 5
	STRINGLITERAL  reduce 5
	ID  reduce 5

	dtype  goto 74
	stmt_list  goto 75
	var_decl  goto 76


state 72
	key_decls : FOREIGNKEY LPAREN attribute_label RPAREN . SEMI  (73)

	SEMI  shift 77
	.  error


state 73
	key_decls : PRIMARYKEY LPAREN attribute_label RPAREN . SEMI  (72)

	SEMI  shift 78
	.  error


state 74
	var_decl : dtype . ID ASSIGN expr SEMI  (53)

	ID  shift 79
	.  error


state 75
	fdef : dtype ID LPAREN formals_opt RPAREN LBRACKET var_decl_list stmt_list . RBRACKET  (4)
	stmt_list : stmt_list . stmt  (6)

	LBRACKET  shift 80
	RBRACKET  shift 81
	WHILE  shift 82
	IF  shift 83
	FOR  shift 84
	RETURN  shift 85
	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	stmt  goto 90
	expr  goto 91


state 76
	var_decl_list : var_decl_list var_decl .  (52)

	.  reduce 52


state 77
	key_decls : FOREIGNKEY LPAREN attribute_label RPAREN SEMI .  (73)

	.  reduce 73


state 78
	key_decls : PRIMARYKEY LPAREN attribute_label RPAREN SEMI .  (72)

	.  reduce 72


state 79
	var_decl : dtype ID . ASSIGN expr SEMI  (53)

	ASSIGN  shift 92
	.  error


state 80
	stmt : LBRACKET . stmt_list RBRACKET  (8)
	stmt_list : .  (5)

	.  reduce 5

	stmt_list  goto 93


state 81
	fdef : dtype ID LPAREN formals_opt RPAREN LBRACKET var_decl_list stmt_list RBRACKET .  (4)

	.  reduce 4


state 82
	stmt : WHILE . LPAREN expr RPAREN stmt  (12)

	LPAREN  shift 94
	.  error


state 83
	stmt : IF . LPAREN expr RPAREN stmt  (10)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (11)

	LPAREN  shift 95
	.  error


state 84
	stmt : FOR . LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (13)

	LPAREN  shift 96
	.  error


state 85
	stmt : RETURN . expr SEMI  (9)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 97


state 86
	expr : PRINT . LPAREN actuals_opt RPAREN  (38)

	LPAREN  shift 98
	.  error


state 87
	expr : INTLITERAL .  (14)

	.  reduce 14


state 88
	expr : STRINGLITERAL .  (15)

	.  reduce 15


state 89
	expr : ID . ASSIGN expr  (16)
	expr : ID . PLEQ expr  (17)
	expr : ID . MIEQ expr  (18)
	expr : ID . MUEQ expr  (19)
	expr : ID . DVEQ expr  (20)
	expr : ID .  (35)
	expr : ID . INCR  (36)
	expr : ID . DECR  (37)
	expr : ID . LPAREN actuals_opt RPAREN  (39)

	LPAREN  shift 99
	ASSIGN  shift 100
	INCR  shift 101
	DECR  shift 102
	PLEQ  shift 103
	MIEQ  shift 104
	MUEQ  shift 105
	DVEQ  shift 106
	PLUS  reduce 35
	MINUS  reduce 35
	TIMES  reduce 35
	MOD  reduce 35
	DIVIDE  reduce 35
	RPAREN  reduce 35
	SEMI  reduce 35
	COMMA  reduce 35
	GT  reduce 35
	LT  reduce 35
	GEQ  reduce 35
	LEQ  reduce 35
	NEQ  reduce 35
	OR  reduce 35
	AND  reduce 35
	EXP  reduce 35
	EQ  reduce 35


state 90
	stmt_list : stmt_list stmt .  (6)

	.  reduce 6


state 91
	stmt : expr . SEMI  (7)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . TIMES expr  (23)
	expr : expr . DIVIDE expr  (24)
	expr : expr . MOD expr  (25)
	expr : expr . EXP expr  (26)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)

	PLUS  shift 107
	MINUS  shift 108
	TIMES  shift 109
	MOD  shift 110
	DIVIDE  shift 111
	SEMI  shift 112
	GT  shift 113
	LT  shift 114
	GEQ  shift 115
	LEQ  shift 116
	NEQ  shift 117
	OR  shift 118
	AND  shift 119
	EXP  shift 120
	EQ  shift 121
	.  error


state 92
	var_decl : dtype ID ASSIGN . expr SEMI  (53)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 122


state 93
	stmt_list : stmt_list . stmt  (6)
	stmt : LBRACKET stmt_list . RBRACKET  (8)

	LBRACKET  shift 80
	RBRACKET  shift 123
	WHILE  shift 82
	IF  shift 83
	FOR  shift 84
	RETURN  shift 85
	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	stmt  goto 90
	expr  goto 91


state 94
	stmt : WHILE LPAREN . expr RPAREN stmt  (12)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 124


state 95
	stmt : IF LPAREN . expr RPAREN stmt  (10)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (11)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 125


state 96
	stmt : FOR LPAREN . expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (13)
	expr_opt : .  (40)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	SEMI  reduce 40

	expr  goto 126
	expr_opt  goto 127


state 97
	stmt : RETURN expr . SEMI  (9)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . TIMES expr  (23)
	expr : expr . DIVIDE expr  (24)
	expr : expr . MOD expr  (25)
	expr : expr . EXP expr  (26)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)

	PLUS  shift 107
	MINUS  shift 108
	TIMES  shift 109
	MOD  shift 110
	DIVIDE  shift 111
	SEMI  shift 128
	GT  shift 113
	LT  shift 114
	GEQ  shift 115
	LEQ  shift 116
	NEQ  shift 117
	OR  shift 118
	AND  shift 119
	EXP  shift 120
	EQ  shift 121
	.  error


state 98
	expr : PRINT LPAREN . actuals_opt RPAREN  (38)
	actuals_opt : .  (47)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	RPAREN  reduce 47

	expr  goto 129
	actuals_opt  goto 130
	actuals_list  goto 131


state 99
	expr : ID LPAREN . actuals_opt RPAREN  (39)
	actuals_opt : .  (47)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	RPAREN  reduce 47

	expr  goto 129
	actuals_opt  goto 132
	actuals_list  goto 131


state 100
	expr : ID ASSIGN . expr  (16)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 133


state 101
	expr : ID INCR .  (36)

	.  reduce 36


state 102
	expr : ID DECR .  (37)

	.  reduce 37


state 103
	expr : ID PLEQ . expr  (17)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 134


state 104
	expr : ID MIEQ . expr  (18)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 135


state 105
	expr : ID MUEQ . expr  (19)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 136


state 106
	expr : ID DVEQ . expr  (20)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 137


state 107
	expr : expr PLUS . expr  (21)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 138


state 108
	expr : expr MINUS . expr  (22)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 139


state 109
	expr : expr TIMES . expr  (23)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 140


state 110
	expr : expr MOD . expr  (25)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 141


state 111
	expr : expr DIVIDE . expr  (24)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 142


state 112
	stmt : expr SEMI .  (7)

	.  reduce 7


state 113
	expr : expr GT . expr  (31)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 143


state 114
	expr : expr LT . expr  (29)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 144


state 115
	expr : expr GEQ . expr  (32)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 145


state 116
	expr : expr LEQ . expr  (30)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 146


state 117
	expr : expr NEQ . expr  (28)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 147


state 118
	expr : expr OR . expr  (33)

	PRINT  shift 86
	INTLITERAL  shift 87
	STRINGLITERAL  shift 88
	ID  shift 89
	.  error

	expr  goto 148


state 119
	expr : expr AND . expr  (34)
